cmake_minimum_required(VERSION 3.21)
project(learn_os C)

set(CMAKE_C_STANDARD 99)

add_executable(learn_os main.c 5/p1.c 5/p2.c 5/p3.c 5/p4.c 5/homework/h1.c 5/homework/h2.c 5/homework/h3.c 5/homework/h4-execl.c 5/homework/h4-execle.c 5/homework/h4-execlp.c 5/homework/h4-execv.c 5/homework/h4-execvp.c 5/homework/h4-execvpe.c)
